fixed overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,7 @@ body{
 
 .ExperienceCard{
   margin: 4em 0;
+  overflow: hidden;
 }
 
 .ExperienceCard img{
